--- a/helium-core/.settings/org.eclipse.core.resources.prefs
+++ b/helium-core/.settings/org.eclipse.core.resources.prefs
@@ -1,6 +1,7 @@
-#Wed Oct 26 10:21:05 CEST 2011
+#Mon May 21 12:20:28 CEST 2012
 eclipse.preferences.version=1
 encoding//src/main/java=UTF-8
 encoding//src/main/resources=UTF-8
 encoding//src/test/java=UTF-8
 encoding//src/test/resources=UTF-8
+encoding/<project>=UTF-8
