--- a/helium-disseny/.settings/org.eclipse.core.resources.prefs
+++ b/helium-disseny/.settings/org.eclipse.core.resources.prefs
@@ -1,5 +1,7 @@
-#Mon May 21 12:43:19 CEST 2012
+#Tue May 22 11:02:58 CEST 2012
 eclipse.preferences.version=1
 encoding//src/main/java=UTF-8
 encoding//src/main/resources=UTF-8
+encoding//src/test/java=UTF-8
+encoding//src/test/resources=UTF-8
 encoding/<project>=UTF-8
