mid: 0000253 msg: Errors en la importació de dades entre diferents instal·lacions
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.4@401 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-disseny/pom.xml
+++ b/helium-disseny/pom.xml
@@ -49,14 +49,14 @@
 			</plugin>
 			<!-- Comentar el següent plugin si es vol generar la llibreria helium-disseny.jar --> 
 			<!--  per a emprar al disseny d'expedients -->
-			<!--plugin>
+			<plugin>
 				<artifactId>maven-jar-plugin</artifactId>
 				<configuration>
 					<excludes>
 						<exclude>**/*Handler.*</exclude>
 					</excludes>
 				</configuration>
-			</plugin-->
+			</plugin>
 			<!--  -->
 		</plugins>
 	</build>
