mid: 0000261 msg: Crear tag 2.4.0 i fer merge de 2.4 amb trunk (Problema de Compilació)
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.4@420 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-plugin-impl/pom.xml
+++ b/helium-plugin-impl/pom.xml
@@ -109,6 +109,12 @@
 			<version>3.2.7.ga</version>
 			<type>jar</type>
 			<scope>provided</scope>
+			<exclusions>
+				<exclusion>
+					<artifactId>jta</artifactId>
+					<groupId>javax.transaction</groupId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
