--- a/helium-webapp/.classpath
+++ b/helium-webapp/.classpath
@@ -12,7 +12,7 @@
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v6.0 (Java 1.5)">
+	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v6.0 -helium">
 		<attributes>
 			<attribute name="owner.project.facets" value="jst.web"/>
 		</attributes>
