mid: 0000528 msg: Merge de la branca 2.6
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@860 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-ear/pom.xml
+++ b/helium-ear/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<artifactId>helium</artifactId>
 		<groupId>net.conselldemallorca</groupId>
-		<version>2.6</version>
+		<version>3.0</version>
 	</parent>
 	<artifactId>helium-ear</artifactId>
 	<packaging>ear</packaging>
@@ -36,7 +36,7 @@
 		<dependency>
 			<groupId>net.conselldemallorca</groupId>
 			<artifactId>helium-webapp</artifactId>
-			<version>2.6</version>
+			<version>${helium.version}</version>
 			<type>war</type>
 		</dependency>
 	</dependencies>
