MID: 550 MSG: S'ha millorat el rendiment al consultar les tasques d'un usuari per entorn
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.6@906 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/properties/helium.properties
+++ b/helium-webapp/properties/helium.properties
@@ -41,6 +41,7 @@ app.hibernate.dialect=org.hibernate.dialect.Oracle9iDialect
 #app.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 app.hibernate.show_sql=false
 app.hibernate.hbm2ddl.auto=update
+app.hibernate.cache=false
 #app.hibernate.hbm2ddl.auto=validate
 
 # ###
