--- a/helium-webapp/pom.xml
+++ b/helium-webapp/pom.xml
@@ -250,6 +250,11 @@
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.googlecode.json-simple</groupId>
+			<artifactId>json-simple</artifactId>
+			<version>1.1</version>
+		</dependency>
 	</dependencies>
 	<profiles>
 		<profile>
