--- a/helium-webapp/properties/helium.properties
+++ b/helium-webapp/properties/helium.properties
@@ -1,82 +1,91 @@
 # Url base (applet signatura, estampa signatura defecte, emails tasca)
 app.base.url=http://localhost:8080/helium
 # Text del copyright
-#app.copyright.text=&copy; 2010 Govern de les Illes Balears
-# Tamany m?xim perm?s pels arxius pujats mitjan?ant HTTP (en bytes)
-app.fileupload.maxsize=10000000
-# Per a habilitar/deshabilitar el bot? de logout (true,false)
+app.copyright.text=&copy; 2010 Govern de les Illes Balears
+# Tamany màxim permès pels arxius pujats mitjançant HTTP (en bytes)
+app.fileupload.maxsize=1000000
+# Per a habilitar/deshabilitar el botó de logout (true,false)
 app.logout.actiu=false
-# Per a habilitar/deshabilitar l'acc?s a la gesti? de persones (true,false)
+# Per a habilitar/deshabilitar l'accés a la gestió de persones (true,false)
 app.persones.actiu=true
-app.rols.actiu=false
-# Per a habilitar/deshabilitar la creaci? i modificaci? de persones (true,false)
-app.persones.readonly=false
-# Per a habilitar/deshabilitar l'acc?s a la gesti? de l'organigrama (true,false)
+app.rols.actiu=true
+# Per a habilitar/deshabilitar la creació i modificació de persones (true,false)
+app.persones.readonly=true
+# Per a habilitar/deshabilitar l'accés a la gestió de l'organigrama (true,false)
 app.organigrama.actiu=true
-# Generador del n?mero d'expedient per defecte
+# Generador del número d'expedient per defecte
 app.numexp.expression=${seq}/${any}
-# Optimitzaci? de les consultes a domini
+# Optimització de les consultes a domini
 app.optimitzar.consultes.domini=false
-# Idiomes en que es pot mostrar l'aplicaci? en codificaci? ISO i separats per comes
-app.idiomes.disponibles=ca_ES,es_ES
-# Idioma per defecte en que es mostrar? l'aplicaci?
-app.idioma.defecte=ca_ES
+
+# Idiomes en que es pot mostrar l'aplicació en codificació ISO i separats per comes
+#app.idiomes.disponibles=ca_ES,es_ES
+# Idioma per defecte en que es mostrarà l'aplicació
+#app.idioma.defecte=ca_ES
 # Activar consulta externa de signatures
-app.verificacio.externa.activa=true
+#app.verificacio.externa.activa=true
+
+# Mesures de temps
+app.mesura.temps.actiu=false
+app.mesura.temps.mesures=120
+app.expedient.monitor=false
 
 app.cas.url=http://oficina.limit.es/sso/login
 
 # ###
-# Configuraci? de jBPM identity
+# Configuració de jBPM identity
 # ###
-# Per a fer que el m?dul identity del jBPM agafi les dades de Helium o de les taules del jBPM (helium,jbpm)
-app.jbpm.identity.source=jbpm
-# Per a fer les assignacions de les persones d'una ?rea recursives
+# Per a fer que el mòdul identity del jBPM agafi les dades de Helium o de les taules del jBPM (helium,jbpm)
+app.jbpm.identity.source=helium
+# Per a fer les assignacions de les persones d'una àrea recursives
 app.jbpm.identity.recursiu=true
 
 # ###
-# Configuraci? de la importaci? de rols
+# Configuració de la importació de rols
 # ###
 # Prefix dels rols que seran rellevants per Helium (si es deixa buit s'agafaran tots)
 app.role.external.prefix=
 
 # ###
-# Configuraci? d'hibernate
+# Configuració d'hibernate
 # ###
 app.hibernate.dialect=org.hibernate.dialect.Oracle9iDialect
-#app.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 #app.hibernate.dialect=org.hibernate.dialect.MySQLInnoDBDialect
+#app.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 app.hibernate.show_sql=false
 app.hibernate.hbm2ddl.auto=update
-hibernate.generate_statistics=true
-app.mesura.temps.actiu=true
-app.expedient.monitor=true
+app.hibernate.cache=false
+hibernate.generate_statistics=false
+#app.hibernate.hbm2ddl.auto=validate
 
 # ###
-# Configuraci? de lucene
+# Configuració de lucene
 # ###
 # Tipus de directory pel lucene (fsDirectory, jdbcDirectory)
 app.lucene.directory=fsDirectory
-# Par?metres pel fsDirectory
-app.lucene.fs.basedir=file://c:/Helium_v3/lucene
-# Par?metres pel jdbcDirectory
+# Paràmetres pel fsDirectory
+app.lucene.fs.basedir=file://c:/tmp/helium/lucene
+# Paràmetres pel jdbcDirectory
 #app.lucene.jdbc.dialect=org.apache.lucene.store.jdbc.dialect.Oracle9Dialect
 #app.lucene.jdbc.dialect=org.apache.lucene.store.jdbc.dialect.MySQLDialect
 #app.lucene.jdbc.dialect=org.apache.lucene.store.jdbc.dialect.PostgreSQLDialect
 
 # ###
-# Par?metres per a la conversi? de documents amb OpenOffice
+# Paràmetres per a la conversió de documents amb OpenOffice
 # ###
 app.conversio.actiu=true
 app.conversio.openoffice.host=10.35.3.87
 app.conversio.openoffice.port=8100
-# Conversi? de documents generant plantilles a les tasques
+# Conversió de documents generant plantilles a les tasques
 app.conversio.gentasca.actiu=true
 app.conversio.gentasca.extension=doc
-# Conversi? de documents per la signatura
-app.conversio.signatura.actiu=true
+# Conversió de documents per la signatura
+app.conversio.signatura.actiu=false
 app.conversio.signatura.extension=pdf
-# Conversi? de documents ja registrats
+# Conversió de documents pel portasignatures
+app.conversio.portasignatures.actiu=false
+app.conversio.portasignatures.extension=pdf
+# Conversió de documents ja registrats
 app.conversio.registre.actiu=true
 app.conversio.registre.extension=pdf
 
@@ -93,7 +102,7 @@ app.calendari.dieslab.mes=21
 app.calendari.dieslab.any=220
 
 # ###
-# Georeferenciaci? d'expedients
+# Georeferenciació d'expedients
 # ###
 app.georef.actiu=true
 # Tipus de georeferenciacio (xy, ref)
@@ -106,32 +115,78 @@ app.correu.remitent=helium@helium.org
 app.correu.reintents=5
 
 # ###
-# Autenticaci? dels serveis proporcionats per Helium
+# Cridades a ws externs
+# ###
+app.ws.client.auth=USERNAMETOKEN
+app.ws.client.generate.timestamp=true
+app.ws.client.log.calls=true
+app.ws.client.disable.cn.check=true
+
+# ###
+# Autenticació dels serveis proporcionats per Helium
 # ###
 # Servei d'avis d'entrades d'expedient
 app.bantel.avisos.auth=NONE
 app.bantel.avisos.generate.timestamp=true
 app.bantel.avisos.log.calls=true
-app.bantel.avisos.username=backoffice
-app.bantel.avisos.password=backoffice
-# Acc?s al servei de domini intern
+app.bantel.avisos.username=sistra
+app.bantel.avisos.password=sistra
+# Versió de bantel (1, 2, esbcim)
+app.bantel.avisos.versio=2
+# Accés al servei de domini intern
 app.domini.intern.auth=NONE
 app.domini.intern.generate.timestamp=true
 app.domini.intern.log.calls=true
 app.domini.intern.username=user
 app.domini.intern.password=pass
-# Acc?s al servei de guardar formularis externs
+# Accés al servei de guardar formularis externs
 app.form.guardar.auth=NONE
 app.form.guardar.generate.timestamp=true
 app.form.guardar.log.calls=true
 app.form.guardar.username=user
 app.form.guardar.password=pass
-# Acc?s al servei de tramitaci?
-app.tramitacio.servei.auth=NONE
+# Accés al servei de tramitació
+app.tramitacio.servei.auth=USERNAMETOKEN
 app.tramitacio.servei.generate.timestamp=true
 app.tramitacio.servei.log.calls=true
 app.tramitacio.servei.username=user
 app.tramitacio.servei.password=pass
+
+# ###
+# Integració amb SISTRA
+# ###
+app.sistra.ws.versio=2
+# BANTEL
+app.bantel.entrades.url=http://10.35.3.83:8080/bantelws/services/v2/BackofficeFacade
+app.bantel.entrades.username=gestor
+app.bantel.entrades.password=gestor
+# ZONAPER
+app.zonaper.service.url=http://10.35.3.83:8080/zonaperws/services/v2/BackofficeFacade
+app.zonaper.service.username=auto
+app.zonaper.service.password=auto
+# REDOSE
+app.redose.service.url=http://10.35.3.83:8080/redosews/services/v2/BackofficeFacade
+app.redose.service.username=auto
+app.redose.service.password=auto
+
+# ###
+# Autenticació dels serveis proporcionats per Helium
+# ###
+# Accés al servei d'avisos pel SISTRA
+app.bantel.avisos.username=sistra
+app.bantel.avisos.password=sistra
+# Accés al servei de consulta de dominis per SISTRA
+#app.domini.consulta.username=user
+#app.domini.consulta.password=pass
+# Accés al servei de domini intern
+#app.domini.intern.username=user
+#app.domini.intern.password=pass
+# Accés al servei de guardar formularis externs
+#app.form.guardar.username=user
+#app.form.guardar.password=pass
+# Accés al servei de callback pel portasignatures
+#app.portasignatures.callback.username=user
+#app.portasignatures.callback.password=pass
 
 # ###
 # Plugin de dades de persones
@@ -139,7 +194,7 @@ app.tramitacio.servei.password=pass
 # Si es comenta aquesta propietat s'agafaran les persones de les taules internes d'Helium
 #app.persones.plugin.class=net.conselldemallorca.helium.integracio.plugins.persones.PersonesPluginLdap
 app.persones.plugin.class=net.conselldemallorca.helium.integracio.plugins.persones.PersonesPluginJdbc
-# Les seg?ents propietats corresponen al plugin PersonesPluginLdap
+# Les següents propietats corresponen al plugin PersonesPluginLdap
 #app.persones.plugin.ldap.url=ldap://server00
 #app.persones.plugin.ldap.principal=oracle@LIMIT_CECOMASA.LOCAL
 #app.persones.plugin.ldap.credentials=agosto
@@ -154,19 +209,15 @@ app.persones.plugin.ldap.filter.user=(&(objectClass=adUser)(sAMAccountName=###))
 app.persones.plugin.ldap.filter.like=(&(objectClass=adUser)(|(givenName=*###*)(sn=*###*)))
 app.persones.plugin.ldap.searchbase=ou=Usuaris interns,ou=Usuaris,dc=conselldemallorca,dc=net
 app.persones.plugin.ldap.attributes=sAMAccountName,givenName,sn,nif,mail
-# Les seg?ents propietats corresponen al plugin PersonesPluginJdbc
-#app.persones.plugin.jdbc.jndi.parameter=java:comp/env/jdbc/SeyconDS
-#app.persones.plugin.jdbc.filter.code=select codi, nom, llinatges, dni, email from hel_persona where codi = :codi
-#app.persones.plugin.jdbc.filter.name=select codi, nom, llinatges, dni, email from hel_persona where upper(nom_sencer) like upper('%'||:nom||'%')
-app.persones.plugin.jdbc.jndi.parameter=java:comp/env/jdbc/SeyconDS
-app.persones.plugin.jdbc.filter.code=select usu_codi, usu_nom, usu_nom, usu_nif, usu_codi || '@limit.es' from sc_wl_usuari where usu_codi = :codi
-app.persones.plugin.jdbc.filter.name=select usu_codi, usu_nom, usu_nom, usu_nif, usu_codi || '@limit.es' from sc_wl_usuari where upper(usu_nom) like upper('%'||:nom||'%')
-app.persones.plugin.jdbc.nom.llimatges.junt=true
-# Si s'activa aquesta propietat el plugin de persones nom?s s'emprar? per a sincronitzar dades de persones. Les consultes de
+# Les següents propietats corresponen al plugin PersonesPluginJdbc
+app.persones.plugin.jdbc.jndi.parameter=java:comp/env/jdbc/HeliumDS
+app.persones.plugin.jdbc.filter.code=select codi, nom, llinatges, dni, email from hel_persona where codi = :codi
+app.persones.plugin.jdbc.filter.name=select codi, nom, llinatges, dni, email from hel_persona where upper(nom_sencer) like upper('%'||:nom||'%')
+# Si s'activa aquesta propietat el plugin de persones només s'emprarà per a sincronitzar dades de persones. Les consultes de
 # dades personales sempre es realitzaran a damunt les taules internes.
-# Per a poder emprar aquesta caracter?stica s'haur? d'emprar alguna implementaci? del plugin de persones.
+# Per a poder emprar aquesta característica s'haurà d'emprar alguna implementació del plugin de persones.
 app.persones.plugin.sync.actiu=false
-# Periode de temps entre dues execucions de la sincronitzaci? d'usuaris (en milisegons)
+# Periode de temps entre dues execucions de la sincronització d'usuaris (en milisegons)
 app.persones.plugin.sync.periode=3600000
 
 # ###
@@ -182,41 +233,28 @@ app.signatura.plugin.afirma.urlbase=http://localhost:8888/afirmaws/services
 app.signatura.plugin.afirma.appid=gobbal.ibit.soa
 app.signatura.plugin.afirma.usuari=ibitsoa
 app.signatura.plugin.afirma.contrasenya=fp49%ME$
-# Par?metres per a configurar el client @Firma
+# Paràmetres per a configurar el client @Firma
 app.signatura.afirma.signature.algorithm=SHA1withRSA
-#app.signatura.afirma.signature.format=CAdES
-app.signatura.afirma.signature.format=PDF
+app.signatura.afirma.signature.format=CAdES
+#app.signatura.afirma.signature.format=PDF
 app.signatura.afirma.cert.filter=
 app.signatura.afirma.install.directory=afirma.5
 app.signatura.afirma.old.versions.action=1
 app.signatura.afirma.show.expired.certificates=true
-app.signatura.afirma.default.build=COMPLETA
+app.signatura.afirma.default.build=LITE
 # Indica si el tipus de signatura que es realitza va adjuntada a dins un fitxer
-app.signatura.plugin.file.attached=true
+app.signatura.plugin.file.attached=false
 
 # ###
-# Integraci? amb el servei de tramitaci?
+# Integració amb el servei de tramitació
 # ###
-# Classe del plugin de tramitaci?
+# Classe del plugin de tramitació
 app.tramitacio.plugin.class=net.conselldemallorca.helium.integracio.plugins.tramitacio.TramitacioPluginSistrav2
-app.tramitacio.plugin.sistra.client.auth=USERNAMETOKEN
-app.tramitacio.plugin.sistra.client.generate.timestamp=true
-app.tramitacio.plugin.sistra.client.log.calls=false
-app.tramitacio.plugin.sistra.client.disable.cn.check=true
-app.tramitacio.plugin.sistra.client.bantel.url=http://10.35.3.96:18080/bantelws/services/v2/BackofficeFacade
-app.tramitacio.plugin.sistra.client.bantel.username=gestor
-app.tramitacio.plugin.sistra.client.bantel.password=gestor
-app.tramitacio.plugin.sistra.client.zonaper.url=http://10.35.3.96:18080/zonaperws/services/v2/BackofficeFacade
-app.tramitacio.plugin.sistra.client.zonaper.username=auto
-app.tramitacio.plugin.sistra.client.zonaper.password=auto
-app.tramitacio.plugin.sistra.client.redose.url=http://10.35.3.96:18080/redosews/services/v2/BackofficeFacade
-app.tramitacio.plugin.sistra.client.redose.username=auto
-app.tramitacio.plugin.sistra.client.redose.password=auto
 
 # ###
-# Integraci? amb el servei de cust?dia documental
+# Integració amb el servei de custòdia documental
 # ###
-# Classe del plugin de cust?dia documental
+# Classe del plugin de custòdia documental
 app.custodia.plugin.class=net.conselldemallorca.helium.integracio.plugins.custodia.CustodiaPluginAlfresco
 #app.custodia.plugin.class=net.conselldemallorca.helium.integracio.plugins.custodia.CustodiaPluginCaib
 #app.custodia.plugin.class=net.conselldemallorca.helium.integracio.plugins.custodia.CustodiaPluginFilesystem
@@ -224,41 +262,39 @@ app.custodia.plugin.filesystem.basedir=c:/tmp/helium/signatures/
 app.custodia.plugin.caib.url=https://proves.caib.es/signatura/services/CustodiaDocumentos
 app.custodia.plugin.caib.usuari=HELIUM
 app.custodia.plugin.caib.password=HELIUMABC
-app.custodia.plugin.caib.verificacio.baseurl=https://proves.caib.es/signatura/sigpub/
 
 # ###
-# Integraci? amb el servei de portasignatures
+# Integració amb el servei de portasignatures
 # ###
 # Classe del plugin de portasignatures
-#app.portasignatures.plugin.class=net.conselldemallorca.helium.integracio.plugins.portasignatures.PortasignaturesPluginCaib
-app.portasignatures.plugin.class=net.conselldemallorca.helium.integracio.plugins.portasignatures.PortasignaturesPluginMock
+app.portasignatures.plugin.class=net.conselldemallorca.helium.integracio.plugins.portasignatures.PortasignaturesPluginCaib
 app.portasignatures.plugin.url=https://proves.caib.es/portafirmasws/web/services/CWS
-app.portasignatures.plugin.usuari=HELIUM_LIMIT
-app.portasignatures.plugin.password=HELIUM_LIMIT
+app.portasignatures.plugin.usuari=HELIUM
+app.portasignatures.plugin.password=HELIUM
 #app.portasignatures.plugin.url=http://sistrapre01.lanbd.conselldemallorca.net:8480/portafirmasws/web/services/CWS
 #app.portasignatures.plugin.usuari=helium
 #app.portasignatures.plugin.password=helium1
-app.portasignatures.plugin.signatura.tipus=2
-app.portasignatures.plugin.id.usuari=codi
-app.portasignatures.plugin.checkcerts=false
+#app.portasignatures.plugin.signatura.tipus=2
+#app.portasignatures.plugin.id.usuari=codi
+#app.portasignatures.plugin.checkcerts=false
 
 # ###
-# Integraci? amb formularis externs
+# Integració amb formularis externs
 # ###
 app.forms.actiu=true
 app.forms.service.url=http://localhost:8080/domini/IniciFormulari
-# Si es comenten els dos par?metres seg?ents l'acc?s al webservice es far? sense autenticaci?
+# Si es comenten els dos paràmetres següents l'accés al webservice es farà sense autenticació
 #app.forms.service.username=user
 #app.forms.service.password=pass
 
 # ###
-# Integraci? amb el Gestor Documental
+# Integració amb el Gestor Documental
 # ###
-#app.gesdoc.plugin.class=net.conselldemallorca.helium.integracio.plugins.gesdoc.GestioDocumentalPluginAlfresco
-#app.gesdoc.plugin.apiurl=http://10.35.3.80:8080/alfresco/api
-#app.gesdoc.plugin.user=helium
-#app.gesdoc.plugin.pass=helium
-#app.gesdoc.plugin.basedir=/Helium
+app.gesdoc.plugin.class=net.conselldemallorca.helium.integracio.plugins.gesdoc.GestioDocumentalPluginAlfresco
+app.gesdoc.plugin.apiurl=http://10.35.3.80:8080/alfresco/api
+app.gesdoc.plugin.user=helium
+app.gesdoc.plugin.pass=helium
+app.gesdoc.plugin.basedir=/Helium
 # CIM
 #app.gesdoc.plugin.class=net.conselldemallorca.helium.integracio.plugins.gesdoc.GestioDocumentalPluginEsbCim
 #app.gesdoc.plugin.url=https://192.168.2.52:9443/services/ServicioGestorDocumental
@@ -266,26 +302,31 @@ app.forms.service.url=http://localhost:8080/domini/IniciFormulari
 #app.gesdoc.plugin.pass=sis_helium1
 
 # ###
-# Integraci? amb el Registre
+# Integració amb el Registre
 # ###
 #app.registre.plugin.class=net.conselldemallorca.helium.integracio.plugins.registre.RegistrePluginRegwebLogic
 #app.registre.plugin.initial.context.factory=org.jboss.security.jndi.JndiLoginInitialContextFactory
 #app.registre.plugin.url.pkg.prefixes=org.jboss.naming:org.jnp.interfaces
-#app.registre.plugin.provider.url=jnp://10.35.3.96:21099
-
+#app.registre.plugin.provider.url=jnp://10.35.3.88:1099
 #app.registre.plugin.security.principal=admin
 #app.registre.plugin.security.credentials=admin
-
 app.registre.plugin.class=net.conselldemallorca.helium.integracio.plugins.registre.RegistrePluginAjuntament
-#app.registre.plugin.initial.context.factory=org.jboss.security.jndi.JndiLoginInitialContextFactory
-app.registre.plugin.initial.context.factory=org.jboss.security.jndi.LoginInitialContextFactory
+app.registre.plugin.initial.context.factory=org.jboss.security.jndi.JndiLoginInitialContextFactory
 app.registre.plugin.url.pkg.prefixes=org.jboss.naming:org.jnp.interfaces
-app.registre.plugin.provider.url=jnp://10.35.3.96:21099
+app.registre.plugin.provider.url=jnp://10.35.3.88:1099
 app.registre.plugin.security.principal=admin
 app.registre.plugin.security.credentials=admin
-app.registre.plugin.url=http://10.35.3.96:18080/regtelws/services/v2/BackofficeFacade
+app.registre.plugin.url=http://10.35.3.83:8080/regtelws/services/v2/BackofficeFacade
 app.registre.plugin.username=gestor
 app.registre.plugin.password=gestor
 app.registre.plugin.rds.model=GE0005ANEXGEN
 app.registre.plugin.rds.versio=1
 app.registre.segell.entitat=LIMIT TECNOLOGIES
+
+# ###
+# Integració amb el GIS
+# ###
+app.gis.plugin.actiu=true
+app.gis.plugin.class=net.conselldemallorca.helium.integracio.plugins.gis.GisPluginSitibsa
+app.gis.plugin.sitibsa.url.visor=http://195.57.62.51:8080/visualitzador/prova.jsp
+
