MID: 558 MSG: Reestructurar informació de estadística de temps
MID: 570
MSG: Error visualització llistat de tasques pendents

MID: 571
MSG: Afegir estadístiques a la pantalla d'inici i a la retroacció

git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.6@933 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/properties/helium.properties
+++ b/helium-webapp/properties/helium.properties
@@ -18,6 +18,11 @@ app.numexp.expression=${seq}/${any}
 # Optimització de les consultes a domini
 app.optimitzar.consultes.domini=false
 app.cas.url=http://oficina.limit.es/sso/login
+# Mesures de temps
+app.mesura.temps.actiu=false
+app.mesura.temps.mesures=120
+hibernate.generate_statistics=false
+app.expedient.monitor=false
 
 # ###
 # Configuració de jBPM identity
