MID: 572 MSG: Estandaritzar el format dels paràmetres del fitxer de properties
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.6@935 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/properties/helium.properties
+++ b/helium-webapp/properties/helium.properties
@@ -21,7 +21,7 @@ app.cas.url=http://oficina.limit.es/sso/login
 # Mesures de temps
 app.mesura.temps.actiu=false
 app.mesura.temps.mesures=120
-hibernate.generate_statistics=false
+app.hibernate.generate_statistics=false
 app.expedient.monitor=false
 
 # ###
