MID: 572 MSG: Estandaritzar el format dels paràmetres del fitxer de properties
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@936 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/properties/helium.properties
+++ b/helium-webapp/properties/helium.properties
@@ -55,7 +55,7 @@ app.hibernate.dialect=org.hibernate.dialect.Oracle9iDialect
 app.hibernate.show_sql=false
 app.hibernate.hbm2ddl.auto=update
 app.hibernate.cache=false
-hibernate.generate_statistics=false
+app.hibernate.generate_statistics=false
 #app.hibernate.hbm2ddl.auto=validate
 
 # ###
