MID: 578 MSG: Realitzar proves amb Selenium
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.6@964 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-selenium/src/test/resources/net/conselldemallorca/helium/test/test.properties
+++ b/helium-selenium/src/test/resources/net/conselldemallorca/helium/test/test.properties
@@ -1,7 +1,7 @@
 # Ejecutar test según navegador
-webdriver.chrome=false
+webdriver.chrome=true
 webdriver.ie=false
-webdriver.ff=true
+webdriver.ff=false
 
 # Drivers de los navegadores
 webdriver.chrome.driver.windows=src\\test\\resources\\net\\conselldemallorca\\helium\\drivers\\windows\\chromedriver.exe
@@ -15,13 +15,13 @@ test.base.url.disseny=http://admin:admin@localhost:8080/helium/index.html
 test.base.url.feina=http://admin:admin@localhost:8080/helium/index.html
 
 test.base.usuari.configuracio=admin
-test.base.usuari.configuracio.nom=Usuari admin
+test.base.usuari.configuracio.nom=Usuari Administrador
 
 test.base.usuari.disseny=admin
-test.base.usuari.disseny.nom=Usuari admin
+test.base.usuari.disseny.nom=Usuari Administrador
 
 test.base.usuari.feina=admin
-test.base.usuari.feina.nom=Usuari admin
+test.base.usuari.feina.nom=Usuari Administrador
 
 test.base.rol.configuracio=HEL_USER
 test.base.group=pruebas
@@ -29,10 +29,17 @@ test.base.group.tipo=tipo de pruebas
 
 # Entorn
 #entorn.nom=Tests selenium
-entorn.nom=javi_selenium
+#entorn.nom=paula_selenium
+entorn.nom=proves_selenium
 
 # Importación de tipos de expediente
-deploy.definicio.proces.nom=sion005
-deploy.tipus.expedient.nom=Tipo de expediente de selenium
+deploy.definicio.proces.nom=expexe
+deploy.tipus.expedient.nom=Tipus expedient de Selenium
 deploy.arxiu.path.windows=src\\test\\resources\\expese.par
 deploy.arxiu.path.linux=/home/sion/Escriptori/lot3/sion005.par
+
+# Definició de procés
+defproc.variable.codi1=var_str01
+defproc.variable.nom1=Nom variable string 1
+defproc.agrupacio.codi1=agrvar_01
+defproc.document.codi1=doc_01
