MID: 578 MSG: Realitzar proves amb Selenium
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.6@967 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-selenium/src/test/resources/net/conselldemallorca/helium/test/test.properties
+++ b/helium-selenium/src/test/resources/net/conselldemallorca/helium/test/test.properties
@@ -43,3 +43,7 @@ defproc.variable.codi1=var_str01
 defproc.variable.nom1=Nom variable string 1
 defproc.agrupacio.codi1=agrvar_01
 defproc.document.codi1=doc_01
+defproc.document.nom1=Nom document 01
+defproc.termini.codi1=ter_01
+defproc.termini.nom1=Nom termini 1
+defproc.tasca.codi1=tasca1
