--- a/helium-selenium/src/test/resources/net/conselldemallorca/helium/test/test.properties
+++ b/helium-selenium/src/test/resources/net/conselldemallorca/helium/test/test.properties
@@ -31,19 +31,38 @@ test.base.group.tipo=tipo de pruebas
 #entorn.nom=Tests selenium
 #entorn.nom=paula_selenium
 entorn.nom=proves_selenium
+entorn.titol=Entorn de proves Selenium
 
 # Importación de tipos de expediente
 deploy.definicio.proces.nom=expexe
 deploy.tipus.expedient.nom=Tipus expedient de Selenium
-deploy.arxiu.path.windows=src\\test\\resources\\expese.par
+#deploy.arxiu.path.windows=src\\test\\resources\\expese.par
+deploy.arxiu.path.windows=c:/expese.par
 deploy.arxiu.path.linux=/home/sion/Escriptori/lot3/sion005.par
 
 # Definició de procés
+defproc.enum.codi1=sino
+defproc.enum.nom1=Sí/No
+
 defproc.variable.codi1=var_str01
 defproc.variable.nom1=Nom variable string 1
+defproc.variable.codi2=var_dat01
+defproc.variable.nom2=Nom variable data 1
+defproc.variable.codi3=var_enum01
+defproc.variable.nom3=Nom variable seleccio 1
+defproc.variable.codi4=var_reg01
+defproc.variable.nom4=Nom variable registre 1
+defproc.variable.codi5=var_mul01
+defproc.variable.nom5=Nom variable múltiple 1
+defproc.variable.codi6=var_ocl01
+defproc.variable.nom6=Nom variable oculta 1
+
 defproc.agrupacio.codi1=agrvar_01
+
 defproc.document.codi1=doc_01
 defproc.document.nom1=Nom document 01
+
 defproc.termini.codi1=ter_01
 defproc.termini.nom1=Nom termini 1
+
 defproc.tasca.codi1=tasca1
