MID: 578 MSG: Realitzar proves amb Selenium
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.6@974 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-selenium/src/test/resources/net/conselldemallorca/helium/test/test.properties
+++ b/helium-selenium/src/test/resources/net/conselldemallorca/helium/test/test.properties
@@ -60,7 +60,10 @@ defproc.variable.nom6=Nom variable oculta 1
 defproc.agrupacio.codi1=agrvar_01
 
 defproc.document.codi1=doc_01
-defproc.document.nom1=Nom document 01
+defproc.document.nom1=Nom document 1
+defproc.document.codi2=doc_02
+defproc.document.nom2=Nom document 2
+defproc.document.arxiu=c:/plantilla.odt
 
 defproc.termini.codi1=ter_01
 defproc.termini.nom1=Nom termini 1
