MID: 578 MSG: Realitzar proves amb Selenium
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.6@976 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-selenium/src/test/resources/net/conselldemallorca/helium/test/test.properties
+++ b/helium-selenium/src/test/resources/net/conselldemallorca/helium/test/test.properties
@@ -35,6 +35,7 @@ entorn.titol=Entorn de proves Selenium
 
 # Importación de tipos de expediente
 deploy.definicio.proces.nom=expexe
+deploy.tipus.expedient.codi=TipExpSel
 deploy.tipus.expedient.nom=Tipus expedient de Selenium
 #deploy.arxiu.path.windows=src\\test\\resources\\expese.par
 deploy.arxiu.path.windows=c:/expese.par
