MID: 578 MSG: Realitzar proves amb Selenium
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.6@979 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-selenium/src/test/resources/net/conselldemallorca/helium/test/test.properties
+++ b/helium-selenium/src/test/resources/net/conselldemallorca/helium/test/test.properties
@@ -70,3 +70,9 @@ defproc.termini.codi1=ter_01
 defproc.termini.nom1=Nom termini 1
 
 defproc.tasca.codi1=tasca1
+
+# Tipus d'expedient
+tipexp.estat.codi1=revdoc
+tipexp.estat.nom1=Revisant documentació
+tipexp.enum.codi1=tipexp
+tipexp.enum.nom1=Tipus expedient
