git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.6@995 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-selenium/src/test/resources/net/conselldemallorca/helium/test/test.properties
+++ b/helium-selenium/src/test/resources/net/conselldemallorca/helium/test/test.properties
@@ -76,3 +76,17 @@ tipexp.estat.codi1=revdoc
 tipexp.estat.nom1=Revisant documentació
 tipexp.enum.codi1=tipexp
 tipexp.enum.nom1=Tipus expedient
+
+
+# Tramitació expedient
+tramit.exp.num=SE-15/2013
+tramit.exp.nom=[SE-15/2013] Expedient de prova Selenium
+tramit.tasca.nom1=tasca1
+tramit.tasca.nom2=tasca2
+tramit.doctasca.arxiu1=c:/docAdjunt.docx
+tramit.variable.codi1=var_str02
+tramit.variable.nom1=Nom variable string 2
+tramit.usuari.codi1=u03420
+tramit.document.nom1=Nom document 1
+tramit.docadjunt.arxiu1=c:/docAdjunt.docx
+tramit.docadjunt.nom1=Nom document adjunt 1
