MID: 578 MSG: Realitzar proves amb Selenium
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.6@997 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-selenium/src/test/resources/net/conselldemallorca/helium/test/test.properties
+++ b/helium-selenium/src/test/resources/net/conselldemallorca/helium/test/test.properties
@@ -57,6 +57,10 @@ defproc.variable.codi5=var_mul01
 defproc.variable.nom5=Nom variable múltiple 1
 defproc.variable.codi6=var_ocl01
 defproc.variable.nom6=Nom variable oculta 1
+defproc.variable.codi7=var_varreg01
+defproc.variable.nom7=Camp 1 variable registre
+defproc.variable.codi8=var_varreg02
+defproc.variable.nom8=Camp 2 variable registre
 
 defproc.agrupacio.codi1=agrvar_01
 
@@ -79,13 +83,13 @@ tipexp.enum.nom1=Tipus expedient
 
 
 # Tramitació expedient
-tramit.exp.num=SE-15/2013
-tramit.exp.nom=[SE-15/2013] Expedient de prova Selenium
+tramit.exp.num=SE-16/2013
+tramit.exp.nom=[SE-16/2013] Expedient de prova Selenium 16
 tramit.tasca.nom1=tasca1
 tramit.tasca.nom2=tasca2
 tramit.doctasca.arxiu1=c:/docAdjunt.docx
-tramit.variable.codi1=var_str02
-tramit.variable.nom1=Nom variable string 2
+tramit.variable.codi1=varstr02
+tramit.variable.valor1=Valor variable string
 tramit.usuari.codi1=u03420
 tramit.document.nom1=Nom document 1
 tramit.docadjunt.arxiu1=c:/docAdjunt.docx
