MID: 528 MSG: Merge de la branca 2.6
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1005 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/helium-webapp/src/main/webapp/WEB-INF/web.xml
@@ -512,7 +512,7 @@
 			<role-name>tothom</role-name>
 		</auth-constraint>
 	</security-constraint>
-	<!--security-constraint>
+	<security-constraint>
 		<web-resource-collection>
 			<web-resource-name>All areas</web-resource-name>
 			<url-pattern>/index.jsp</url-pattern>
@@ -534,7 +534,7 @@
 			<url-pattern>/signatura/arxiu.html</url-pattern>
 			<url-pattern>/rol/test.html</url-pattern>
 		</web-resource-collection>
-	</security-constraint-->
+	</security-constraint>
 	<!-- security-constraint.end -->
 
 	<!--error-page>
