--- a/helium-core/pom.xml
+++ b/helium-core/pom.xml
@@ -405,6 +405,11 @@
 			<version>${helium.version}</version>
 			<type>jar</type>
 		</dependency>
+		<dependency>
+			<groupId>com.googlecode.json-simple</groupId>
+			<artifactId>json-simple</artifactId>
+			<version>1.1</version>
+		</dependency>
 	</dependencies>
 	<repositories>
 		<repository>
