MID: 578 MSG: Realitzar jocs de proves amb selenium
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.6@1012 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/pom.xml
+++ b/pom.xml
@@ -18,5 +18,6 @@
 		<module>helium-util</module>
 		<module>helium-webapp</module>
 		<module>helium-ws</module>
+		<module>helium-selenium</module>
 	</modules>
 </project>
