MID: 609 MSG: Errors de falta de memòria al intentar finalitzar una tasca
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1023 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-core/pom.xml
+++ b/helium-core/pom.xml
@@ -30,6 +30,17 @@
 		  <version>0.6.1</version>
 		</dependency>
 		<dependency>
+			<groupId>ma.glasnost.orika</groupId>
+			<artifactId>orika-core</artifactId>
+			<version>1.4.3</version>
+			<exclusions>
+				<exclusion>
+					<artifactId>slf4j-simple</artifactId>
+					<groupId>org.slf4j</groupId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-core</artifactId>
 			<version>${hibernate.version}</version>
