mid: 620 msg: Actualització de la versió del applet de firma d'Helium a java 7
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.6@1046 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/pom.xml
+++ b/pom.xml
@@ -19,5 +19,6 @@
 		<module>helium-webapp</module>
 		<module>helium-ws</module>
 		<module>helium-selenium</module>
+		<module>helium-applet</module>
 	</modules>
 </project>
