MID: 528 MSG: Merge de la branca 2.6
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1047 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/pom.xml
+++ b/pom.xml
@@ -35,5 +35,6 @@
 		<module>helium-jbpm3</module>
 		<module>helium-core-api</module>
 		<module>helium-hibernate-entitymanager</module>
+		<module>helium-applet</module>
 	</modules>
 </project>
