--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
 		<module>helium-util</module>
 		<module>helium-webapp</module>
 		<module>helium-ws</module>
-		<module>helium-selenium</module>
-		<module>helium-applet</module>
+<!-- 		<module>helium-selenium</module> -->
+<!-- 		<module>helium-applet</module> -->
 	</modules>
 </project>
