--- a/helium-ear/pom.xml
+++ b/helium-ear/pom.xml
@@ -73,6 +73,11 @@
 			<version>${helium.version}</version>
 			<type>war</type>
 		</dependency>
+		<dependency>
+			<groupId>commons-beanutils</groupId>
+			<artifactId>commons-beanutils</artifactId>
+			<version>1.9.1</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
