--- a/helium-webapp/pom.xml
+++ b/helium-webapp/pom.xml
@@ -273,7 +273,7 @@
 		<profile>
 			<id>tomcat</id>
 			<activation>
-				<activeByDefault>false</activeByDefault>
+				<activeByDefault>true</activeByDefault>
 			</activation>
 			<properties>
 				<application.context>application-context-tomcat.xml</application.context>
@@ -328,7 +328,7 @@
 		<profile>
 			<id>jboss</id>
 			<activation>
-				<activeByDefault>true</activeByDefault>
+				<activeByDefault>false</activeByDefault>
 			</activation>
 			<properties>
 				<application.context>application-context-jboss.xml</application.context>
@@ -371,6 +371,16 @@
 					<scope>provided</scope>
 				</dependency>
 			</dependencies>
+			<build>
+				<resources>
+					<resource>
+						<directory>src/main/resources</directory>
+						<excludes>
+							<exclude>**/log4j.xml</exclude>
+						</excludes>
+					</resource>
+				</resources>
+			</build>
 		</profile>
 	</profiles>
 	<build>
