mid: 613 msg: Error al registrar des de les accions massives
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.6@1086 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-plugin-impl/pom.xml
+++ b/helium-plugin-impl/pom.xml
@@ -22,6 +22,20 @@
 		</dependency>
 		<dependency>
 			<groupId>es.caib</groupId>
+			<artifactId>seyconsession-common</artifactId>
+			<version>3.2.8-caib7</version>
+			<scope>system</scope>
+			<systemPath>${basedir}/libext/seyconsession-common.jar</systemPath>
+		</dependency>
+		<dependency>
+			<groupId>org.jboss</groupId>
+			<artifactId>jboss-jmx</artifactId>
+			<version>3.2.8</version>
+			<scope>system</scope>
+			<systemPath>${basedir}/libext/jboss-jmx.jar</systemPath>
+		</dependency>
+		<dependency>
+			<groupId>es.caib</groupId>
 			<artifactId>valcert-client-axis</artifactId>
 			<version>1.5</version>
 			<scope>system</scope>
