MID: 655 MSG: Jocs de proves amb Selenium v.3 	ENT.1 Crear entorn 	ENT.2 Seleccionar entorn 	ENT.3 Marcar entorn per defecte 	ENT.4 Modificar entorn 	ENT.5 Assignar i desassignar permisos 	ENT.7 Eliminar entorn
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1138 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-selenium/src/test/resources/net/conselldemallorca/helium/test/util/test.properties
+++ b/helium-selenium/src/test/resources/net/conselldemallorca/helium/test/util/test.properties
@@ -36,7 +36,7 @@ test.base.group=pruebas
 test.base.group.tipo=tipo de pruebas
 
 # Entorn
-entorn.nom=proves_selenium
+entorn.nom=Selenium
 entorn.titol=Entorn de proves Selenium
 
 # Importación de tipos de expediente
