MID: 655 MSG: Jocs de proves amb Selenium v.3 	ENT.8 Crear enumeracions 	DPR.1 Desplegar arxiu jBPM a entorn i a tipus d'expedient 	DPR.12 Eliminar definició de procés
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1151 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-selenium/src/test/resources/net/conselldemallorca/helium/test/util/test.properties
+++ b/helium-selenium/src/test/resources/net/conselldemallorca/helium/test/util/test.properties
@@ -6,10 +6,10 @@ test.executar.suite.configuracio=true
 
 # Drivers de los navegadores
 # Windows
-webdriver.chrome.driver=src\\test\\resources\\es\\caib\\sifog\\drivers\\windows\\chromedriver.exe
-webdriver.ie.driver=src\\test\\resources\\es\\caib\\sifog\\drivers\\windows\\IEDriverServer.exe
+# webdriver.chrome.driver=src\\test\\resources\\es\\caib\\sifog\\drivers\\windows\\chromedriver.exe
+# webdriver.ie.driver=src\\test\\resources\\es\\caib\\sifog\\drivers\\windows\\IEDriverServer.exe
 # Linux
-#webdriver.chrome.driver=src/test/resources/es/caib/sifog/drivers/linux/chromedriver
+webdriver.chrome.driver=src/test/resources/es/caib/sifog/drivers/linux/chromedriver
 
 # Adreça - usuari del test
 test.base.url.configuracio=http://admin:admin@localhost:8080/helium/index.html
@@ -29,14 +29,14 @@ test.base.rol.configuracio=HEL_USER
 test.base.group=pruebas
 test.base.group.tipo=tipo de pruebas
 
-# Entorn
-#entorn.nom=Selenium
-#entorn.titol=Entorn de proves Selenium
-#entorn.nom=proves_selenium_jav
-entorn.nom=proves_selenium
-entorn.titol=Entorn de proves Selenium Javi
+# Proves Entorn
+entorn.nom=Selenium entorn
+entorn.titol=Entorn de proves Selenium - Entorn
 
-# Importación de tipos de expediente
+# Proves Definició de procés
+defproc.entorn.nom=Selenium defpro
+defproc.entorn.titol=Entorn de proves Selenium - Definicio Proces
+
 deploy.definicio.proces.nom=expexe
 deploy.tipus.expedient.codi=TipExpSel
 deploy.tipus.expedient.nom=Tipus expedient de Selenium
@@ -46,7 +46,7 @@ deploy.tipus.expedient.nom=Tipus expedient de Selenium
 # Linux
 deploy.arxiu.path=/home/sion/Escriptori/lot3/expese.par
 
-# Definició de procés
+
 defproc.enum.codi1=sino
 defproc.enum.nom1=Sí/No
 
@@ -99,23 +99,3 @@ tramit.usuari.codi1=u03420
 tramit.document.nom1=Nom document 1
 tramit.docadjunt.arxiu1=c:/docAdjunt.docx
 tramit.docadjunt.nom1=Nom document adjunt 1
-
-# Portasignatures
-deploy.arxiu.portasignatures=src\\test\\resources\\net\\conselldemallorca\\helium\\test\\util\\blank.pdf
-app.portasignatures.plugin.class=net.conselldemallorca.helium.integracio.plugins.portasignatures.PortasignaturesPluginCaib
-app.portasignatures.plugin.url=http://localhost:8080/helium-selenium-integraciones/services/CWS
-app.portasignatures.plugin.url.callback=http://localhost:8080/helium/services/MCGDWS
-app.portasignatures.plugin.usuari=HELIUM
-app.portasignatures.plugin.password=HELIUM
-
-# Custodia
-deploy.arxiu.custodia=src\\test\\resources\\net\\conselldemallorca\\helium\\test\\util\\blank.pdf
-app.custodia.plugin.class=net.conselldemallorca.helium.integracio.plugins.custodia.CustodiaPluginFilesystem
-app.custodia.plugin.filesystem.basedir=c:/server/helium/custodia/
-app.custodia.plugin.caib.url=http://localhost:8080/helium-selenium-integraciones/services/CustodiaDocumentos
-app.custodia.plugin.caib.usuari=HELIUM
-app.custodia.plugin.caib.password=HELIUMABC
-app.custodia.plugin.caib.verificacio.baseurl=https://proves.caib.es/signatura/sigpub/
-
-# Tramitación
-app.tramitacion.url=http://localhost:8080/helium/ws/TramitacioService
